--- a/assets/css/simule.css
+++ b/assets/css/simule.css
@@ -6,20 +6,18 @@ body {
 }
 
 .campo_simulador {
-    background-color: #E5E5E5;
+    background-color: #c6e8f4;
     color: #E6005A;
-    width: 1000px;
-    height: 500px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     font-weight: bold;
-    border-radius: 15px;
-    margin-left: 50px;
-    margin-top: 100px;
-    text-align: start;
-    margin-bottom: 20px;
+    width: 70%;
+    margin: 50px auto;
+    border-radius: 10px;
+}
+#mostrar_valor{
+    max-width: 350px;
+    font-size: 20px;
 }
 
 form {
