--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -71,12 +71,20 @@ form button {
     background-color: #E6005A;
     color: white;
     padding: 10px 15px;
-    width: 120px;
+    width: 200px;
     align-self: center;
     font-size: 18px;
     border: 0;
-    border-radius: 10px;
+    border-radius: 28px;
     cursor: pointer;
-    margin-top: 50px;
+    margin-top: 40px;
+    transition: 0.5s;
+    
 }
 
+form button:hover{
+    color: white;
+    background-color: #E6005A;
+    transform: translateY(-25px);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+}
