--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,8 +1,9 @@
-body {
+*{
     margin: 0;
     padding: 0;
     font-family: 'Sarala', sans-serif;
-    background-color: white;
+    outline: none;
+
 }
 
 .header {
