--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Sarala', sans-serif;
-}
-
 .header {
     color: #ADD8E6;
     text-decoration: none;
@@ -32,7 +26,6 @@
 .beneficios li{
     margin: 5px 0;
     color: white;
-    list-style-type: decimal;
 }
 
 .beneficios li a{
@@ -50,8 +43,8 @@
 
 .saibaMais a{
     background: url("../imgs/down-arrow.png") no-repeat;
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     background-size: cover;
     border-radius: 7px;
     border: 2px solid black;
@@ -104,11 +97,14 @@
     cursor: pointer;
     transition: 0.5s;
     text-decoration: none;
+    margin-top: 50px;
 }
 
 .btn_simule:hover{
     color: white;
     background-color: #E6005A;
+    transform: translateY(-25px);
+    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.45);
 }
 
 
