--- a/assets/css/tecnologia.css
+++ b/assets/css/tecnologia.css
@@ -1,10 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Sarala', sans-serif;
-    background-color: white;
-}
-
 .header {
     color: #ADD8E6;
     text-decoration: none;
@@ -13,6 +6,8 @@ body {
 
 .banner {
     background-color: white;
+    display: flex;
+    margin-top: 40px;
 
 }
 
@@ -44,6 +39,13 @@ h2 {
     align-content: center;
     border: solid #FFD3FB 15px;
     display: flex;
+    transition: 0.5s;
+    margin-top: 20px;
+}
+
+.funcoes:hover {
+    transform: translateY(-25px);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
 }
 
 .funcoes2 {
@@ -57,6 +59,13 @@ h2 {
     align-content: center;
     border: solid #FFD3FB 15px;
     display: flex;
+    transition: 0.5s;
+    margin-top: 20px;
+}
+
+.funcoes2:hover {
+    transform: translateY(-25px);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
 }
 
 .funcoes3 {
@@ -71,4 +80,11 @@ h2 {
     align-content: center;
     border: solid #FFD3FB 15px;
     display: flex;
+    transition: 0.5s;
+    margin-top: 20px;
+}
+
+.funcoes3:hover {
+    transform: translateY(-25px);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
 }
