--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -11,7 +11,7 @@
     background-size: cover;
 }
 
-.banner .container{
+.banner .container {
     width: 80%;
     margin: 0 auto;
     display: flex;
@@ -23,17 +23,17 @@
     font-size: 30px;
 }
 
-.beneficios li{
+.beneficios li {
     margin: 5px 0;
     color: white;
 }
 
-.beneficios li a{
+.beneficios li a {
     color: white;
     font-size: 20px;
 }
 
-.saibaMais{
+.saibaMais {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,7 +41,7 @@
     position: relative;
 }
 
-.saibaMais a{
+.saibaMais a {
     background: url("../imgs/down-arrow.png") no-repeat;
     height: 30px;
     width: 30px;
@@ -60,7 +60,7 @@
     font-size: 30px;
 }
 
-.termometro img{
+.termometro img {
     height: 300px;
     position: relative;
     top: 120px;
@@ -69,21 +69,25 @@
 .banner2 {
     margin-top: 150px;
 }
-.container2{
+
+.container2 {
     width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
-.card2{
+
+.card2 {
     display: flex;
     flex-direction: column;
 }
+
 .card2_subtitle {
-    color:#E6005A;
+    color: #E6005A;
     margin: 15px 0;
 }
-.img_home img{
+
+.img_home img {
     height: 400px;
 }
 
@@ -100,17 +104,25 @@
     margin-top: 50px;
 }
 
-.btn_simule:hover{
+.btn_simule:hover {
     color: white;
     background-color: #E6005A;
     transform: translateY(-25px);
-    box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.45);
 }
 
 
 
 @keyframes bounce {
-    0% { top: 30px }
-    50% { top: 50px }
-    100% { top: 30px }
+    0% {
+        top: 30px
+    }
+
+    50% {
+        top: 50px
+    }
+
+    100% {
+        top: 30px
+    }
 }
