--- a/assets/css/tecnologia.css
+++ b/assets/css/tecnologia.css
@@ -19,10 +19,10 @@ h2 {
     color: #E6005A;
 }
 
-.img_tecnologia img{
+.img_tecnologia img {
     display: flex;
     height: 800px;
-    position:absolute;
+    position: absolute;
     margin-left: 100px;
     margin-bottom: 10px;
 }
@@ -32,7 +32,7 @@ h2 {
     width: 600px;
     height: 90px;
     margin-left: 650px;
-    text-align:center;
+    text-align: center;
     position: relative;
     margin-top: 10px;
     border-radius: 15px;
@@ -43,9 +43,14 @@ h2 {
     margin-top: 20px;
 }
 
+.funcoes p {
+    font-size: 14px;
+    text-align: center;
+}
+
 .funcoes:hover {
     transform: translateY(-25px);
-    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.45);
 }
 
 .funcoes2 {
@@ -54,7 +59,7 @@ h2 {
     height: 90px;
     margin-left: 650px;
     border-radius: 15px;
-    text-align:center;
+    text-align: center;
     position: relative;
     align-content: center;
     border: solid #FFD3FB 15px;
@@ -63,9 +68,14 @@ h2 {
     margin-top: 20px;
 }
 
+.funcoes2 p {
+    font-size: 14px;
+    text-align: center;
+}
+
 .funcoes2:hover {
     transform: translateY(-25px);
-    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.45);
 }
 
 .funcoes3 {
@@ -74,7 +84,7 @@ h2 {
     height: 90px;
     margin-left: 650px;
     border-radius: 15px;
-    text-align:center;
+    text-align: center;
     position: relative;
     margin-bottom: 330px;
     align-content: center;
@@ -84,7 +94,12 @@ h2 {
     margin-top: 20px;
 }
 
+.funcoes3 p {
+    font-size: 14px;
+    text-align: center;
+}
+
 .funcoes3:hover {
     transform: translateY(-25px);
-    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.45);
 }
